test_regress/t/t_property_sexpr_parse_unsup.out
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:30:39: Unsupported: not (in multi-expression property)
   30 |   assert property (@(e14) not (val[0] ##2 val[1]));
      |                                       ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:32:35: Unsupported: not (in multi-delay sequence expression)
   32 |   assert property (@(posedge clk) not val ##2 val);
      |                                   ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:33:44: Unsupported: not (in multi-expression property)
   33 |   assert property (@(posedge clk) not (val ##1 val));
      |                                            ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:34:35: Unsupported: not (in multi-delay sequence expression)
   34 |   assert property (@(posedge clk) not ##1 val ##2 val);
      |                                   ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:75:14: Unsupported: sequence match items
   75 |     ($rose(a), l_b = b) |-> ##[3:10] q[l_b];
      |              ^
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:75:29: Unsupported: ## range cycle delay range expression
   75 |     ($rose(a), l_b = b) |-> ##[3:10] q[l_b];
      |                             ^~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:74:13: Unsupported: property variable declaration
   74 |     integer l_b;
      |             ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:92:16: Unsupported: sequence match items
   92 |     (count == 0, l_t = $realtime) ##1 (count == 7)[->1] |-> $realtime - l_t < 50.5;
      |                ^
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:92:51: Unsupported: [-> boolean abbrev expression
   92 |     (count == 0, l_t = $realtime) ##1 (count == 7)[->1] |-> $realtime - l_t < 50.5;
      |                                                   ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:92:54: Unsupported: boolean abbrev (in sequence expression)
   92 |     (count == 0, l_t = $realtime) ##1 (count == 7)[->1] |-> $realtime - l_t < 50.5;
      |                                                      ^
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:90:14: Unsupported: property variable declaration
   90 |     realtime l_t;
      |              ^~~
%Error-UNSUPPORTED: t/t_property_sexpr_unsup.v:96:25: Unsupported: not (in multi-delay sequence expression)
   96 |   assert property (@clk not a ##1 b);
      |                         ^~~
%Error: Exiting due to
